syntax = "proto3";

package user;

service UserService {
  rpc FindOneByEmail(FindOneRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc ValidatePassword(ValidatePasswordRequest) returns (ValidatePasswordResponse);
}

message FindOneRequest {
  string email = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message ValidatePasswordRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  int32 id = 1;
  string email = 2;
  string password = 3;
}

message ValidatePasswordResponse {
  bool isValid = 1;
  int32 userId = 2;
}
